test/testdata/functions/unused_parameter_error.lox
// error: z has been declared but is never used
fun add(x, y, z) {
    return x + y;
}

_ = add;
